[package]
name = "abstract-tx"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
tx-rs.workspace = true

dao = { path = "../dao" }
payroll-domain = { path = "../payroll-domain" }
payroll-impl = { path = "../payroll-impl" }

