[package]
name = "affiliation-tx"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
tx-rs.workspace = true

abstract-tx = { path = "../abstract-tx" }
dao = { path = "../dao" }
payroll-domain = { path = "../payroll-domain" }
payroll-impl = { path = "../payroll-impl" }
