[package]
name = "classification-tx"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
tx-rs.workspace = true

abstract-tx = { path = "../abstract-tx" }
payroll-domain = { path = "../payroll-domain" }
payroll-impl = { path = "../payroll-impl" }
