[package]
name = "mock-main"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
abstract-tx = { path = "../abstract-tx" }
mock-app = { path = "../mock-app" }
payroll-domain = { path = "../payroll-domain" }
tx-app = { path = "../tx-app" }
