[package]
name = "mock-tx-impl"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
tx-rs.workspace = true

abstract-tx = { path = "../abstract-tx" }
tx-impl = { path = "../tx-impl" }
dao = { path = "../dao" }
mock-db = { path = "../mock-db" }
payroll-domain = { path = "../payroll-domain" }
tx = { path = "../tx" }
tx-app = { path = "../tx-app" }
