[package]
name = "parser"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
parsec-rs = { git = "https://github.com/cutsea110/fragments.git", branch = "main" }

payroll-domain = { path = "../payroll-domain" }
