[package]
name = "test-payroll-app"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
abstract-tx = { path = "../abstract-tx" }
payroll-app = { path = "../payroll-app" }
tx-app = { path = "../tx-app" }
