[package]
name = "text-parser-tx-source"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
parsec-rs.workspace = true

mock-db = { path = "../mock-db" }
parser = { path = "../parser" }
tx = { path = "../tx" }
tx-app = { path = "../tx-app" }
tx-impl = { path = "../tx-impl" }
