[package]
name = "text-parser-tx-source"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
parsec-rs.workspace = true

payroll-domain = { path = "../payroll-domain" }
tx-app = { path = "../tx-app" }
tx-factory = { path = "../tx-factory" }
